feat: changed way admin main works.